[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/My_handwritten_font-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/general/add.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/general/remove.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/general/remove_selected.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/general/underline.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/general/add_selected.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/produce_farm/grain.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/produce_farm/fruit.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/produce_farm/beans.png" type="Texture" id=9]
[ext_resource path="res://Scripts/EndOfDaySummary.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="EndOfDaySummary" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.943848
margin_right = 0.943848
custom_constants/margin_right = 400
custom_constants/margin_top = 100
custom_constants/margin_left = 400
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Margin"]
margin_left = 400.0
margin_top = 100.0
margin_right = 880.0
margin_bottom = 620.0
color = Color( 1, 0.992157, 0.941176, 0.882353 )

[node name="VBox" type="VBoxContainer" parent="Margin/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Margin/Background/VBox"]
margin_right = 480.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
End of day summary"
align = 1
valign = 1

[node name="Treasury" type="VBoxContainer" parent="Margin/Background/VBox"]
margin_top = 116.0
margin_right = 480.0
margin_bottom = 268.0

[node name="Debt" type="Label" parent="Margin/Background/VBox/Treasury"]
margin_right = 480.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.768627, 0.192157, 0.192157, 1 )
text = "- 1000000"
align = 1
valign = 1

[node name="Center" type="CenterContainer" parent="Margin/Background/VBox/Treasury"]
margin_top = 44.0
margin_right = 480.0
margin_bottom = 84.0

[node name="HBox" type="HBoxContainer" parent="Margin/Background/VBox/Treasury/Center"]
margin_left = 125.0
margin_right = 355.0
margin_bottom = 40.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decrease" type="TextureButton" parent="Margin/Background/VBox/Treasury/Center/HBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Pay" type="Label" parent="Margin/Background/VBox/Treasury/Center/HBox"]
margin_left = 40.0
margin_right = 190.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.192157, 0.768627, 0.309804, 1 )
text = "+ 100"
align = 1
valign = 1

[node name="Increase" type="TextureButton" parent="Margin/Background/VBox/Treasury/Center/HBox"]
margin_left = 190.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Margin/Background/VBox/Treasury"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 140.0
margin_top = 88.0
margin_right = 340.0
margin_bottom = 108.0
rect_min_size = Vector2( 200, 20 )
size_flags_horizontal = 4
size_flags_vertical = 5
texture = ExtResource( 5 )
expand = true

[node name="Total" type="Label" parent="Margin/Background/VBox/Treasury"]
margin_top = 112.0
margin_right = 480.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.768627, 0.192157, 0.192157, 1 )
text = "- 999900"
align = 1
valign = 1

[node name="BuyProduce" type="VBoxContainer" parent="Margin/Background/VBox"]
margin_top = 293.0
margin_right = 480.0
margin_bottom = 421.0

[node name="Grain" type="CenterContainer" parent="Margin/Background/VBox/BuyProduce"]
margin_right = 480.0
margin_bottom = 40.0

[node name="HBox" type="HBoxContainer" parent="Margin/Background/VBox/BuyProduce/Grain"]
margin_left = 125.0
margin_right = 355.0
margin_bottom = 40.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrainDecrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Grain/HBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="Margin/Background/VBox/BuyProduce/Grain/HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Margin/Background/VBox/BuyProduce/Grain/HBox/Icon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrainIncrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Grain/HBox"]
margin_left = 190.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Fruit" type="CenterContainer" parent="Margin/Background/VBox/BuyProduce"]
margin_top = 44.0
margin_right = 480.0
margin_bottom = 84.0

[node name="HBox" type="HBoxContainer" parent="Margin/Background/VBox/BuyProduce/Fruit"]
margin_left = 125.0
margin_right = 355.0
margin_bottom = 40.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitDecrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Fruit/HBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="Margin/Background/VBox/BuyProduce/Fruit/HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Margin/Background/VBox/BuyProduce/Fruit/HBox/Icon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitIncrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Fruit/HBox"]
margin_left = 190.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Beans" type="CenterContainer" parent="Margin/Background/VBox/BuyProduce"]
margin_top = 88.0
margin_right = 480.0
margin_bottom = 128.0

[node name="HBox" type="HBoxContainer" parent="Margin/Background/VBox/BuyProduce/Beans"]
margin_left = 125.0
margin_right = 355.0
margin_bottom = 40.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeansDecrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Beans/HBox"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="Margin/Background/VBox/BuyProduce/Beans/HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Margin/Background/VBox/BuyProduce/Beans/HBox/Icon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeansIncrease" type="TextureButton" parent="Margin/Background/VBox/BuyProduce/Beans/HBox"]
margin_left = 190.0
margin_right = 230.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Done" type="Button" parent="Margin/Background/VBox"]
margin_left = 202.0
margin_top = 446.0
margin_right = 278.0
margin_bottom = 482.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.380392, 0.286275, 1 )
text = "done"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_EndOfDaySummary_visibility_changed"]
[connection signal="pressed" from="Margin/Background/VBox/Treasury/Center/HBox/Decrease" to="." method="_on_Decrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/Treasury/Center/HBox/Increase" to="." method="_on_Increase_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Grain/HBox/GrainDecrease" to="." method="_on_GrainDecrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Grain/HBox/GrainIncrease" to="." method="_on_GrainIncrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Fruit/HBox/FruitDecrease" to="." method="_on_FruitDecrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Fruit/HBox/FruitIncrease" to="." method="_on_FruitIncrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Beans/HBox/BeansDecrease" to="." method="_on_BeansDecrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/BuyProduce/Beans/HBox/BeansIncrease" to="." method="_on_BeansIncrease_pressed"]
[connection signal="pressed" from="Margin/Background/VBox/Done" to="." method="_on_Done_pressed"]
